# python-component-schema

./: .gitignore  README.md  pyproject.toml
example/generated-sdk/python/: setup.py
example/generated-sdk/python/pulumi_banana/: __init__.py  provider.py  pulumi-plugin.json  self_signed_certificate.py
example/my-component/: __main__.py  self_signed_cert.py
example/pulumi_project/: Pulumi.yaml  __main__.py  pyproject.toml  stack.json
example/pulumi_project_yaml/: Pulumi.yaml
src/: __init__.py  analyzer.py  host.py  provider.py  schema.py
tests/: test_analyzer.py
tests/testdata/tls/: __init__.py
